fix text overlapping header image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1069,12 +1069,14 @@ footer {
 
 	.tag_heading {
 		padding-top: 64px;
+		height: 300px !important;
 	}
 
 	.tag_heading_post {
 		background-size: cover;
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
+		height: 300px !important;
 	}
 
 	.text-main {
@@ -1280,7 +1282,7 @@ footer {
 
 	.tag_heading {
 		margin-top: 0;
-		height: 300px !important;
+		height: 350px !important;
 	}
 
 	.tag_heading_home {
